--- a/public/neck.html
+++ b/public/neck.html
@@ -84,7 +84,7 @@
     const tempChart1 = document.getElementById('temp');
     const coChart1 = document.getElementById('CO');
     const spoChart1 = document.getElementById('spo');
-    let LAT, LNG;
+    let LAT = 0, LNG = 0;
 
     const socket = io();
 
